Apply fix, scrollbar for overwide doodles

--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ div.dokuwiki table.inline td.notokay {
   text-align: center;
 }
 
-#innerscrollbar {
-    overflow: auto;
+.doodle2_scrollcontainer {
+    overflow-x: auto;
+	margin-bottom:19.6px;
 }
+
 .doodle__edit {
   background:url(../../../lib/images/pencil.png) top right no-repeat;
   width: 20px;
